fix(CmnBase/1-GeneralKnowlegde) Remove -c option > > Before fixing: Cmnbase and strutils is built to object file with .so suffix > After fixing: CmnBase and strutils is built to library > Test step: User command file <file name> to check the output of Makefile

--- a/1-GeneralKnowlegde/Makefile
+++ b/1-GeneralKnowlegde/Makefile
@@ -26,7 +26,7 @@ all: shared static
 
 #Build strutils as dynamic lib and move it to linking directory
 $(SHARED_LIB):
-	$(CC) -c ${LIB_SOURCES} $(LIB_FLAGS) $(DEBUGFLAGS) -shared -o $(SHARED_LIB)
+	$(CC) ${LIB_SOURCES} $(LIB_FLAGS) $(DEBUGFLAGS) -shared -o $(SHARED_LIB)
 	mv $(SHARED_LIB) $(LINKING_DIR)
 
 #Build strutils as static lib and move it to linking directory
